# minify-rs

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
src/html/: html_minifier.rs  html_read.rs  mod.rs  multi_filter.rs
src/io/: chars.rs  chars_error.rs  mod.rs  multi_filter.rs  reader.rs  unstable.rs
src/json/: json_minifier.rs  json_read.rs  mod.rs  multi_filter.rs
