[package]
name = "minify"
version = "1.2.0"
authors = ["Marc Mettke <marc@itmettke.de>"]
edition = "2018"

description = "Crate for text minification. Currently supported: html, json"
homepage = "https://github.com/mettke/minify-rs"
readme = "README.md"
keywords = ["minify", "minification", "html", "json"]
categories = ["compression"]
license = "MIT"
repository = "https://github.com/mettke/minify-rs"
